--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="favicon.ico">
     <title>히토랭</title>
     <style>
         body {
@@ -23,12 +25,6 @@
         .switch-container label {
             font-size: 16px;
         }
-        
-        textarea {
-            width: 100%;
-            height: 100px;
-            margin-bottom: 20px;
-        }
     </style>
 </head>
 
@@ -44,7 +40,7 @@
         1. 아스키 -> 바이너리 화
     </h3>
     참고:
-    <img src="image.png" alt="아스키테이블" width="100%">
+    <img src="image.png" alt="아스키테이블" width="500px">
     <h3>
         2. 패턴 치환
     </h3>
@@ -56,17 +52,25 @@
     <h4>
         연속된 개수에 따라 다름
     </h4>
-    0 -> 엑</br>
-    00 -> 응옥 </br>
-    000 -> 응오옥</br>
-    0000 -> 응오오옥</br>
-    ... </br>
-    1 -> 핫</br>
-    11 -> 하읏 </br>
-    111 -> 하으읏</br>
-    1111 -> 하으으읏</br>
-    ...
-
+    <p>
+        0 -> 엑</br>
+        00 -> 응옥 </br>
+        000 -> 응오옥</br>
+        0000 -> 응오오옥</br>
+        ... </br>
+        1 -> 핫</br>
+        11 -> 하읏 </br>
+        111 -> 하으읏</br>
+        1111 -> 하으으읏</br>
+        ...
+    </p>
+    <h3>
+        예시
+    </h3>
+    <textarea id="original-text" placeholder="a"></textarea>
+    <div class="arrow-down">↓</div>
+    <!-- 아래 화살표 -->
+    <textarea id="hitolang-text" placeholder="엑안돼응오옥핫"></textarea>
     <h2>
         해석하는 법
     </h2>
